bindings/swift/slh_dsa_uniffiFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
RustBuffer uniffi_slh_dsa_uniffi_fn_func_slh_dsa_verify(RustBuffer param, RustBuffer verifying_key, RustBuffer msg, RustBuffer ctx, RustBuffer signature, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_slh_dsa_uniffi_fn_func_slh_dsa_verifying_key_from_signing_key(RustBuffer param, RustBuffer signing_key, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_slh_dsa_uniffi_fn_func_slh_dsa_verifying_key_len(RustBuffer param, RustCallStatus *_Nonnull out_status
);
uint16_t uniffi_slh_dsa_uniffi_checksum_func_slh_dsa_keypair_generate(void
    
);
uint16_t uniffi_slh_dsa_uniffi_checksum_func_slh_dsa_parameter_name(void
    
);
uint16_t uniffi_slh_dsa_uniffi_checksum_func_slh_dsa_sign(void
    
);
uint16_t uniffi_slh_dsa_uniffi_checksum_func_slh_dsa_sign_deterministic(void
    
);
uint16_t uniffi_slh_dsa_uniffi_checksum_func_slh_dsa_signature_len(void
    
);
uint16_t uniffi_slh_dsa_uniffi_checksum_func_slh_dsa_signing_key_len(void
    
);
uint16_t uniffi_slh_dsa_uniffi_checksum_func_slh_dsa_verify(void
    
);
uint16_t uniffi_slh_dsa_uniffi_checksum_func_slh_dsa_verifying_key_from_signing_key(void
    
);
uint16_t uniffi_slh_dsa_uniffi_checksum_func_slh_dsa_verifying_key_len(void
    
);
uint32_t ffi_slh_dsa_uniffi_uniffi_contract_version(void
    
);