bindings/python/slh_dsa_uniffi.py

    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slh_dsa_uniffi_fn_func_slh_dsa_verify.restype = _UniffiRustBuffer
_UniffiLib.uniffi_slh_dsa_uniffi_fn_func_slh_dsa_verifying_key_from_signing_key.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slh_dsa_uniffi_fn_func_slh_dsa_verifying_key_from_signing_key.restype = _UniffiRustBuffer
_UniffiLib.uniffi_slh_dsa_uniffi_fn_func_slh_dsa_verifying_key_len.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slh_dsa_uniffi_fn_func_slh_dsa_verifying_key_len.restype = ctypes.c_uint64
_UniffiLib.ffi_slh_dsa_uniffi_uniffi_contract_version.argtypes = (
)
_UniffiLib.ffi_slh_dsa_uniffi_uniffi_contract_version.restype = ctypes.c_uint32
_UniffiLib.uniffi_slh_dsa_uniffi_checksum_func_slh_dsa_keypair_generate.argtypes = (
)
_UniffiLib.uniffi_slh_dsa_uniffi_checksum_func_slh_dsa_keypair_generate.restype = ctypes.c_uint16
_UniffiLib.uniffi_slh_dsa_uniffi_checksum_func_slh_dsa_parameter_name.argtypes = (
)
_UniffiLib.uniffi_slh_dsa_uniffi_checksum_func_slh_dsa_parameter_name.restype = ctypes.c_uint16
_UniffiLib.uniffi_slh_dsa_uniffi_checksum_func_slh_dsa_sign.argtypes = (
)
_UniffiLib.uniffi_slh_dsa_uniffi_checksum_func_slh_dsa_sign.restype = ctypes.c_uint16
_UniffiLib.uniffi_slh_dsa_uniffi_checksum_func_slh_dsa_sign_deterministic.argtypes = (
)
_UniffiLib.uniffi_slh_dsa_uniffi_checksum_func_slh_dsa_sign_deterministic.restype = ctypes.c_uint16
_UniffiLib.uniffi_slh_dsa_uniffi_checksum_func_slh_dsa_signature_len.argtypes = (
)
_UniffiLib.uniffi_slh_dsa_uniffi_checksum_func_slh_dsa_signature_len.restype = ctypes.c_uint16
_UniffiLib.uniffi_slh_dsa_uniffi_checksum_func_slh_dsa_signing_key_len.argtypes = (
)
_UniffiLib.uniffi_slh_dsa_uniffi_checksum_func_slh_dsa_signing_key_len.restype = ctypes.c_uint16
_UniffiLib.uniffi_slh_dsa_uniffi_checksum_func_slh_dsa_verify.argtypes = (
)
_UniffiLib.uniffi_slh_dsa_uniffi_checksum_func_slh_dsa_verify.restype = ctypes.c_uint16
_UniffiLib.uniffi_slh_dsa_uniffi_checksum_func_slh_dsa_verifying_key_from_signing_key.argtypes = (
)
_UniffiLib.uniffi_slh_dsa_uniffi_checksum_func_slh_dsa_verifying_key_from_signing_key.restype = ctypes.c_uint16
_UniffiLib.uniffi_slh_dsa_uniffi_checksum_func_slh_dsa_verifying_key_len.argtypes = (
)
_UniffiLib.uniffi_slh_dsa_uniffi_checksum_func_slh_dsa_verifying_key_len.restype = ctypes.c_uint16

_uniffi_check_contract_api_version(_UniffiLib)
# _uniffi_check_api_checksums(_UniffiLib)



# Public interface members begin here.







class SlhDsaStatus(enum.Enum):
    
    OK = 0
    
    INVALID_PARAM = 1
    
    INVALID_LENGTH = 2
    
    DECODE_ERROR = 3
    
    VERIFY_FAILED = 4
    


class _UniffiFfiConverterTypeSlhDsaStatus(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        variant = buf.read_i32()
        if variant == 1:
            return SlhDsaStatus.OK
        if variant == 2:
            return SlhDsaStatus.INVALID_PARAM
        if variant == 3:
            return SlhDsaStatus.INVALID_LENGTH
        if variant == 4:
            return SlhDsaStatus.DECODE_ERROR
        if variant == 5:
            return SlhDsaStatus.VERIFY_FAILED
        raise InternalError("Raw enum value doesn't match any cases")

    @staticmethod
    def check_lower(value):
        if value == SlhDsaStatus.OK:
            return
        if value == SlhDsaStatus.INVALID_PARAM:
            return
        if value == SlhDsaStatus.INVALID_LENGTH:
            return
        if value == SlhDsaStatus.DECODE_ERROR:
            return
        if value == SlhDsaStatus.VERIFY_FAILED:
            return
        raise ValueError(value)

    @staticmethod
    def write(value, buf):
        if value == SlhDsaStatus.OK:
            buf.write_i32(1)
        if value == SlhDsaStatus.INVALID_PARAM:
            buf.write_i32(2)
        if value == SlhDsaStatus.INVALID_LENGTH:
            buf.write_i32(3)
        if value == SlhDsaStatus.DECODE_ERROR:
            buf.write_i32(4)
        if value == SlhDsaStatus.VERIFY_FAILED:
            buf.write_i32(5)



class _UniffiFfiConverterBytes(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        size = buf.read_i32()
        if size < 0:
            raise InternalError("Unexpected negative byte string length")
        return buf.read(size)

    @staticmethod
    def check_lower(value):
        try:
            memoryview(value)
        except TypeError:
            raise TypeError("a bytes-like object is required, not {!r}".format(type(value).__name__))

    @staticmethod
    def write(value, buf):
        buf.write_i32(len(value))
        buf.write(value)

@dataclass
class KeyResult:
    def __init__(self, *, status:SlhDsaStatus, verifying_key:bytes):
        self.status = status
        self.verifying_key = verifying_key
        
        

    
    def __str__(self):
        return "KeyResult(status={}, verifying_key={})".format(self.status, self.verifying_key)
    def __eq__(self, other):
        if self.status != other.status:
            return False
        if self.verifying_key != other.verifying_key:
            return False
        return True

class _UniffiFfiConverterTypeKeyResult(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        return KeyResult(
            status=_UniffiFfiConverterTypeSlhDsaStatus.read(buf),
            verifying_key=_UniffiFfiConverterBytes.read(buf),
        )

    @staticmethod
    def check_lower(value):
        _UniffiFfiConverterTypeSlhDsaStatus.check_lower(value.status)
        _UniffiFfiConverterBytes.check_lower(value.verifying_key)

    @staticmethod
    def write(value, buf):
        _UniffiFfiConverterTypeSlhDsaStatus.write(value.status, buf)
        _UniffiFfiConverterBytes.write(value.verifying_key, buf)

@dataclass
class Keypair:
    def __init__(self, *, signing_key:bytes, verifying_key:bytes):
        self.signing_key = signing_key
        self.verifying_key = verifying_key
        
        

    
    def __str__(self):
        return "Keypair(signing_key={}, verifying_key={})".format(self.signing_key, self.verifying_key)
    def __eq__(self, other):
        if self.signing_key != other.signing_key:
            return False
        if self.verifying_key != other.verifying_key:
            return False
        return True

class _UniffiFfiConverterTypeKeypair(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        return Keypair(
            signing_key=_UniffiFfiConverterBytes.read(buf),
            verifying_key=_UniffiFfiConverterBytes.read(buf),
        )

    @staticmethod
    def check_lower(value):
        _UniffiFfiConverterBytes.check_lower(value.signing_key)
        _UniffiFfiConverterBytes.check_lower(value.verifying_key)

    @staticmethod
    def write(value, buf):
        _UniffiFfiConverterBytes.write(value.signing_key, buf)
        _UniffiFfiConverterBytes.write(value.verifying_key, buf)

@dataclass
class SignResult:
    def __init__(self, *, status:SlhDsaStatus, signature:bytes):
        self.status = status
        self.signature = signature
        
        

    
    def __str__(self):
        return "SignResult(status={}, signature={})".format(self.status, self.signature)
    def __eq__(self, other):
        if self.status != other.status:
            return False
        if self.signature != other.signature:
            return False
        return True

class _UniffiFfiConverterTypeSignResult(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        return SignResult(
            status=_UniffiFfiConverterTypeSlhDsaStatus.read(buf),
            signature=_UniffiFfiConverterBytes.read(buf),
        )

    @staticmethod
    def check_lower(value):
        _UniffiFfiConverterTypeSlhDsaStatus.check_lower(value.status)
        _UniffiFfiConverterBytes.check_lower(value.signature)

    @staticmethod
    def write(value, buf):
        _UniffiFfiConverterTypeSlhDsaStatus.write(value.status, buf)
        _UniffiFfiConverterBytes.write(value.signature, buf)

class _UniffiFfiConverterBoolean:
    @classmethod
    def check_lower(cls, value):
        return not not value

    @classmethod
    def lower(cls, value):
        return 1 if value else 0

    @staticmethod
    def lift(value):
        return value != 0

    @classmethod
    def read(cls, buf):
        return cls.lift(buf.read_u8())

    @classmethod
    def write(cls, value, buf):
        buf.write_u8(value)

@dataclass
class VerifyResult:
    def __init__(self, *, status:SlhDsaStatus, valid:bool):
        self.status = status
        self.valid = valid
        
        

    
    def __str__(self):
        return "VerifyResult(status={}, valid={})".format(self.status, self.valid)
    def __eq__(self, other):
        if self.status != other.status:
            return False
        if self.valid != other.valid:
            return False
        return True

class _UniffiFfiConverterTypeVerifyResult(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        return VerifyResult(
            status=_UniffiFfiConverterTypeSlhDsaStatus.read(buf),
            valid=_UniffiFfiConverterBoolean.read(buf),
        )

    @staticmethod
    def check_lower(value):
        _UniffiFfiConverterTypeSlhDsaStatus.check_lower(value.status)
        _UniffiFfiConverterBoolean.check_lower(value.valid)

    @staticmethod
    def write(value, buf):
        _UniffiFfiConverterTypeSlhDsaStatus.write(value.status, buf)
        _UniffiFfiConverterBoolean.write(value.valid, buf)






class ParameterSetId(enum.Enum):
    
    SHAKE128S = 0
    
    SHAKE128F = 1
    
    SHAKE192S = 2
    
    SHAKE192F = 3
    
    SHAKE256S = 4
    
    SHAKE256F = 5
    
    SHA2_128S = 6
    
    SHA2_128F = 7
    
    SHA2_192S = 8
    
    SHA2_192F = 9
    
    SHA2_256S = 10
    
    SHA2_256F = 11
    


class _UniffiFfiConverterTypeParameterSetId(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        variant = buf.read_i32()
        if variant == 1:
            return ParameterSetId.SHAKE128S
        if variant == 2:
            return ParameterSetId.SHAKE128F
        if variant == 3:
            return ParameterSetId.SHAKE192S
        if variant == 4:
            return ParameterSetId.SHAKE192F
        if variant == 5:
            return ParameterSetId.SHAKE256S
        if variant == 6:
            return ParameterSetId.SHAKE256F
        if variant == 7:
            return ParameterSetId.SHA2_128S
        if variant == 8:
            return ParameterSetId.SHA2_128F
        if variant == 9:
            return ParameterSetId.SHA2_192S
        if variant == 10:
            return ParameterSetId.SHA2_192F
        if variant == 11:
            return ParameterSetId.SHA2_256S
        if variant == 12:
            return ParameterSetId.SHA2_256F
        raise InternalError("Raw enum value doesn't match any cases")

    @staticmethod
    def check_lower(value):
        if value == ParameterSetId.SHAKE128S:
            return
        if value == ParameterSetId.SHAKE128F:
            return
        if value == ParameterSetId.SHAKE192S:
            return
        if value == ParameterSetId.SHAKE192F:
            return
        if value == ParameterSetId.SHAKE256S:
            return
        if value == ParameterSetId.SHAKE256F:
            return
        if value == ParameterSetId.SHA2_128S:
            return
        if value == ParameterSetId.SHA2_128F:
            return
        if value == ParameterSetId.SHA2_192S:
            return
        if value == ParameterSetId.SHA2_192F:
            return
        if value == ParameterSetId.SHA2_256S:
            return
        if value == ParameterSetId.SHA2_256F:
            return
        raise ValueError(value)
